--- a/surveyor-web/src/home-page/components/network-card.ng.html
+++ b/surveyor-web/src/home-page/components/network-card.ng.html
@@ -1,13 +1,33 @@
-<mat-card>
-  <mat-card-header>
-    <mat-card-title>{{ssid}}</mat-card-title>
-    <mat-card-subtitle>Channel: {{channel}} BSSID: {{bssid}}</mat-card-subtitle>
-  </mat-card-header>
-  <mat-card-content>
-    Document ID in database: {{documentId}}
-  </mat-card-content>
-  <mat-card-actions>
-    <button mat-button>Hide</button>
-    <button mat-button>Expand</button>
-  </mat-card-actions>
-</mat-card>
+<mat-table [dataSource]="devices" class="mat-elevation-z8">
+  <!-- Name Column -->
+  <ng-container matColumnDef="name">
+    <mat-header-cell mat-header-cell *matHeaderCellDef> Name </mat-header-cell>
+    <mat-cell *matCellDef="let device">
+      <mat-form-field>
+        <input matInput type="text" [(ngModel)]="device.name" placeholder="Device Nickname">
+        <mat-icon matSuffix (click)="update(device)">check</mat-icon>
+      </mat-form-field>
+    </mat-cell>
+  </ng-container>
+
+   <!-- Last Seen Column -->
+   <ng-container matColumnDef="last_seen">
+      <mat-header-cell mat-header-cell *matHeaderCellDef> Last Seen </mat-header-cell>
+      <mat-cell *matCellDef="let device"> {{device.last_seen | lastSeen}} </mat-cell>
+    </ng-container>
+
+  <!-- Mac Column -->
+  <ng-container matColumnDef="mac">
+    <mat-header-cell *matHeaderCellDef> MAC Addr. </mat-header-cell>
+    <mat-cell *matCellDef="let device"> {{device.mac}} </mat-cell>
+  </ng-container>
+
+  <!-- Vendor Column -->
+  <ng-container matColumnDef="vendor">
+    <mat-header-cell mat-header-cell *matHeaderCellDef> Vendor </mat-header-cell>
+    <mat-cell *matCellDef="let device"> {{device.vendor}} </mat-cell>
+  </ng-container>
+
+  <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+  <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
+</mat-table>
