--- a/surveyor-web/src/network-details-page/components/network-card.css
+++ b/surveyor-web/src/network-details-page/components/network-card.css
@@ -1,3 +1,14 @@
 table {
     width: 100%;
   }
+
+td.mat-column-actions {
+    width: 20px; 
+    padding-left: 8px;
+  }
+
+td.mat-column-actions {
+    width: 20px; 
+    padding-right: 8px;
+  }
+  
