--- a/surveyor-web/src/network-details-page/components/network-card.ng.html
+++ b/surveyor-web/src/network-details-page/components/network-card.ng.html
@@ -1,10 +1,27 @@
-<mat-table [dataSource]="devices"
-           class="mat-elevation-z8">
+<table mat-table
+       [dataSource]="devices"
+       class="mat-elevation-z8">
+
+  <!-- Currently Active Column -->
+  <ng-container matColumnDef="starred">
+    <th mat-header-cell
+        *matHeaderCellDef>
+      Track
+    </th>
+    <td mat-cell
+        *matCellDef="let device">
+      <mat-slide-toggle (click)="star(device)"
+                        [checked]="device.starred">
+      </mat-slide-toggle>
+    </td>
+  </ng-container>
+
   <!-- Name Column -->
   <ng-container matColumnDef="name">
-    <mat-header-cell mat-header-cell
-                     *matHeaderCellDef> Name </mat-header-cell>
-    <mat-cell *matCellDef="let device">
+    <th mat-header-cell
+        *matHeaderCellDef> Name </th>
+    <td mat-cell
+        *matCellDef="let device">
       <mat-form-field>
         <input matInput
                type="text"
@@ -13,45 +30,58 @@
         <mat-icon matSuffix
                   (click)="update(device)">check</mat-icon>
       </mat-form-field>
-    </mat-cell>
-  </ng-container>
-
-  <!-- Currently Active Column -->
-  <ng-container matColumnDef="currentlyActive">
-    <mat-header-cell mat-header-cell
-                     *matHeaderCellDef> Active Now </mat-header-cell>
-    <mat-cell *matCellDef="let device"> {{device.activity?.length > 0 ? "yes" : "no"}} </mat-cell>
+    </td>
   </ng-container>
 
   <!-- Last Seen Column -->
   <ng-container matColumnDef="lastSeen">
-    <mat-header-cell mat-header-cell
-                     *matHeaderCellDef> Last Seen </mat-header-cell>
-    <mat-cell *matCellDef="let device"> {{device.last_seen | lastSeen}} </mat-cell>
+    <th mat-header-cell
+        *matHeaderCellDef> Last Seen </th>
+    <td mat-cell
+        *matCellDef="let device"> {{device.last_seen | lastSeen}} </td>
   </ng-container>
 
   <!-- Mac Column -->
   <ng-container matColumnDef="mac">
-    <mat-header-cell *matHeaderCellDef> MAC Addr. </mat-header-cell>
-    <mat-cell *matCellDef="let device"> {{device.mac}} </mat-cell>
+    <th mat-header-cell
+        *matHeaderCellDef> MAC Addr. </th>
+    <td mat-cell
+        *matCellDef="let device"> {{device.mac}} </td>
   </ng-container>
 
   <!-- Vendor Column -->
   <ng-container matColumnDef="vendor">
-    <mat-header-cell mat-header-cell
-                     *matHeaderCellDef> Vendor </mat-header-cell>
-    <mat-cell *matCellDef="let device"> {{device.vendor}} </mat-cell>
+    <th mat-header-cell
+        *matHeaderCellDef> Vendor </th>
+    <td mat-cell
+        *matCellDef="let device"> {{device.vendor}} </td>
   </ng-container>
 
-  <!-- Delete Column -->
-  <ng-container matColumnDef="delete">
-    <mat-header-cell mat-header-cell
-                     *matHeaderCellDef> Delete </mat-header-cell>
-    <mat-cell *matCellDef="let device">
-      <mat-icon (click)="delete(device)">delete</mat-icon>
-    </mat-cell>
+  <!-- Actions Column -->
+  <ng-container matColumnDef="actions">
+    <th mat-header-cell
+        *matHeaderCellDef></th>
+    <td mat-cell
+        *matCellDef="let device">
+      <button mat-button
+              [matMenuTriggerFor]="menu">
+        <mat-icon>more_vert</mat-icon>
+      </button>
+      <mat-menu #menu="matMenu">
+        <button mat-menu-item
+                (click)="stop(device)">
+          <mat-icon>stop</mat-icon>Blacklist
+        </button>
+        <button mat-menu-item
+                (click)="delete(device)">
+          <mat-icon>delete</mat-icon>Delete Data
+        </button>
+      </mat-menu>
+    </td>
   </ng-container>
 
-  <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
-  <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
-</mat-table>
+  <tr mat-header-row
+      *matHeaderRowDef="displayedColumns"></tr>
+  <tr mat-row
+      *matRowDef="let row; columns: displayedColumns;"></tr>
+</table>
